@@ -1,30 +1,48 @@
-# 💬 Simple Chat Application
+# Poker Game
 
-A real-time chat application built with Java and JavaFX featuring private messaging and file sharing.
+A simple 5-card draw poker game built in Java with a JavaFX user interface.
 
-## ✨ Features
+## Project Structure
 
-- 💬 **Real-time messaging** - Send and receive messages instantly
-- 👥 **Online users list** - See who's currently online
-- 🔒 **Private messaging** - Send private messages using @username
-- 📎 **File sharing** - Send and receive files between users
-- 🎨 **Modern UI** - Clean interface with pink theme
-- 🚀 **Multi-client support** - Multiple users can chat simultaneously
+- `src/`
+  - `Card.java` — represents a playing card.
+  - `Deck.java` — manages the deck and card shuffling.
+  - `HandEvaluator.java` — evaluates poker hands and determines winners.
+  - `Player.java` — stores player state, chip count, and hand.
+  - `PokerGame.java` — game logic and round flow.
+  - `PokerApp.java` — JavaFX application UI and controls.
+- `bin/` — compiled classes output directory.
+- `.vscode/launch.json` — launch configuration for running the app from VS Code.
 
-## 🛠️ Technologies Used
+## Requirements
 
-- Java (JDK 11 or higher)
-- JavaFX for GUI
-- Socket programming for networking
-- Multi-threading for concurrent clients
+- Java 17 or newer
+- JavaFX SDK installed
+- VS Code Java extension pack (optional, but recommended)
 
-## 📋 Prerequisites
+## Run from VS Code
 
-- **Java JDK 11+** - [Download here](https://www.oracle.com/java/technologies/downloads/)
-- **JavaFX SDK** - [Download here](https://gluonhq.com/products/javafx/)
-- **Git** (optional, for cloning)
+The workspace includes a launch configuration for `PokerApp`.
 
-### Verify Java Installation
-```bash
-java --version
-javac --version
+1. Open the workspace in VS Code.
+2. Select the `Run and Debug` view.
+3. Choose `Run PokerApp`.
+4. Start the application.
+
+## Run from the command line
+
+Replace the JavaFX SDK path below with your local JavaFX installation path.
+
+```powershell
+cd "c:\Users\yeabsira\OneDrive\Documents\poker"
+
+javac --module-path "C:\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml -d bin src\*.java
+
+java --module-path "C:\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.fxml -cp bin PokerApp
+```
+
+## Notes
+
+- The application uses JavaFX for the game UI.
+- The launch configuration already includes the required `--module-path` and `--add-modules` VM arguments.
+- Ensure the JavaFX SDK version matches your installed JDK.
